[tool.poetry]
name = "kev"
version = "0.10.0"
description = "K.E.V. (Keys, Extra Stuff, and Values) is a Python ORM for key-value stores and document databases based on Valley. Currently supported backends are Redis, S3 and a S3/Redis hybrid backend."
authors = ["Brian Jinwright <brian@ipoots.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
envs = "^1.3"
valley = "^1.5.5"
boto3 = "^1.16.43"
redis = "^3.5.3"
pyzmq = "19.0.2"
jupyterlab = "^3.0.0"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
coverage = "^5.3.1"
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
